# demo-project

./: .gitignore  README.md  pyproject.toml
deployment/: co2-gdp-db.py  pyproject.toml
docs/: evaluation.qmd  index.qmd  project_charta.qmd
