[project]
name = "demo-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
    "geopandas>=1.1.2",
    "jupyterlab>=4.4.7",
    "matplotlib>=3.10.6",
    "pandas>=2.3.2",
    "plotly>=5,<6",
    "python-dotenv>=1.1.1",
    "seaborn>=0.13.2",
    "streamlit>=1.54.0",
    "ydata-profiling>=4.12.2",
]
